fixed layout bug with import/export in IE

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -429,10 +429,12 @@ body.not-found {
 
 #import-editor-block-url-container {
   display: none;
+  clear: both;
 }
 
 #export-editor-block-url-container {
   display: none;
+  clear: both;
 }
 
 #import-editor-block-button {
